replaced display:none with visibility:hidden - solved scrolling problem; started refactoring of scss around header

--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -1,22 +1,19 @@
-$menu-height: 2em;
+@import './common';
 
 .headroom-wrapper {
-    max-height: $menu-height;
+    max-height: $header-height;
 }
 
 .site-nav {
-    height: $menu-height;
     line-height: 1.85em;
-    flex-grow: 1;
     padding-left: 25px;
     display: flex;
-    margin-bottom: 15px;
     background-color: white;
     box-shadow: 0 4px 11px 0 #000;
 }
 
 .branding {
-    display: flex;
+    @include header;
     font-weight: bold;
 }
 
@@ -27,8 +24,11 @@ $menu-height: 2em;
 }
 
 .branding>div:nth-child(2) {
-    background: black;
     position: relative;
+}
+
+.branding>div:nth-child(3) {
+    flex-grow: 1;
 }
 
 .branding>div>div {
